--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -1,10 +1,3 @@
-/* 
-  Localizable.strings
-  HandsApp
-
-  Created by Ariuna Banzarkhanova on 08/03/23.
-  
-*/
 //TUTORIALCAMERAVIEWCONTROLLER
 
 "Gestures" = "Жесты";
@@ -36,7 +29,7 @@
 "TAKE A PICTURE" = "CДЕЛАТЬ ФОТО";
 
 //THUMPPAGEVIEW
-"TRY now!" = "Твоя очередь!";
+"TRY now!" = "Теперь попробуй ты!";
 
 //CAMERAVIEWCONTROLLER
 "Video added to photos!" = "Видео сохранено в галерею";
